<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.example</groupId>
  <artifactId>jcon-demo</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>jcon-demo</name>
  <url>http://maven.apache.org</url>

<build>
  <sourceDirectory>.</sourceDirectory>
  <plugins>
    <!-- Java compiler plugin -->
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.11.0</version>
      <configuration>
        <source>21</source>
        <target>21</target>
        <compilerArgs>
          <arg>--enable-preview</arg>
        </compilerArgs>
        <includes>
          <include>JconBackup.java</include>
        </includes>
      </configuration>
    </plugin>
  </plugins>
</build>


  <dependencies>
          <dependency>
          <groupId>io.github.beehive-lab</groupId>
          <artifactId>tornado-api</artifactId>
          <version>2.1.0</version>
      </dependency>
<!-- 
     <dependency>
        <groupId>tornado</groupId>
        <artifactId>tornado-examples</artifactId>
        <version>1.1.2-dev</version>
    </dependency> -->

 
<dependency>
    <groupId>io.github.beehive-lab</groupId>
    <artifactId>tornado-runtime</artifactId>
    <version>2.1.0</version>
</dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
